add roll angle input & correct the spell 'azimuth'

--- a/misc/json_editor/json_editor.html
+++ b/misc/json_editor/json_editor.html
@@ -309,7 +309,7 @@
                         "grid_columns": 6
                       },
                     },
-                    "initial azimth[deg]": {
+                    "initial azimuth[deg]": {
                       type: "number",
                       minimum: 0,
                       maximum: 360,
@@ -498,7 +498,7 @@
                         "grid_columns": 6
                       },
                     },
-                    "initial azimth[deg]": {
+                    "initial azimuth[deg]": {
                       type: "number",
                       minimum: 0,
                       maximum: 360,
@@ -687,7 +687,7 @@
                         "grid_columns": 6
                       },
                     },
-                    "initial azimth[deg]": {
+                    "initial azimuth[deg]": {
                       type: "number",
                       minimum: 0,
                       maximum: 360,
